# Pyganimation

./: LICENSE  README.md  __init__.py  _constants.py  animation_manager.py  pyproject.toml
core/: __init__.py  animation_base.py  animation_file_manager.py  animation_list_converter.py  script_converter.py  script_validation_check.py
core/Script Style/AnimationList/: AnimationList.txt
core/Script Style/AnimationScript/: Internal-Used.txt
core/Script Style/AnimationTimeline/: AnimationTimeline.txt
core/converter/: animation_list_converter.py  animation_timeline_converter.py  script_converter.py  sprite_animation_script_converter.py
core/interface/: __init__.py  animation_interface.py  animation_manager_interface.py  animation_script_interface.py  math_interface.py
core/math/: __init__.py  anchor.py  bezier_curve.py  conic_section.py  interpolate_functions.py  tools.py
core/math/followable_shape/: __init__.py  bezier_curve.py  conic_section.py  followable_shape.py
core/validation_check/: __init__.py  component_validation_check.py  normal_validation_check.py  parameter_validation_check.py  vector_validation_check.py
elements/: __init__.py  animation.py  animation_list.py  animation_script.py  animation_timeline.py  base_animation.py  base_vector_animation.py  sprite_animation.py  sprite_animation_script.py
examples/: Angle Anchoring.py  Following Bezier Curve.py  Keyframe Script.py  Script from JSON file.py  Sprite Animation.py
examples/scripts/: json_script_example.json
test/: test.py  test_script.json
(+13 files in other folders)
