[project]
name = "pyganimation"
version = "0.1.0"
authors = [
  { name="OuroboLee", email="ourobolee@gmail.com" },
]
description = "Pygame Animation Library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/OuroboLee/pyganimation"
Issues = "https://github.com/OuroboLee/pyganimation/issues"